--- a/client/package.json
+++ b/client/package.json
@@ -8,21 +8,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@tanstack/react-query": "^4.29.19",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
-    "@tanstack/react-query": "^4.29.19",
-    "tailwindcss": "^3.3.0",
-    "@headlessui/react": "^1.7.14",
-    "lucide-react": "^0.263.1",
     "recharts": "^2.7.2",
-    "react-beautiful-dnd": "^13.1.1",
+    "tailwindcss": "^3.3.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.3.9",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24"
+    "postcss": "^8.4.24",
+    "vite": "^4.5.14"
   }
 }
