--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,8 @@ jobs:
           cache-dependency-path: client/package-lock.json
       - run: npm ci
       - run: npm run build
+        env:
+          VITE_API_URL: https://forgeboard-api.onrender.com
       - uses: actions/upload-pages-artifact@v3
         with:
           path: client/dist
