--- a/render.yaml
+++ b/render.yaml
@@ -10,6 +10,6 @@ services:
       - key: NODE_ENV
         value: production
       - key: FRONTEND_URL
-        value: https://braedenlyman.github.io/ForgeBoard
+        value: https://braedenlyman.github.io
       - key: MONGODB_URI
         sync: false
