--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       - run: npm ci
       - run: npm run build
         env:
-          VITE_API_URL: https://forgeboard-api.onrender.com
+          VITE_API_URL: https://forgeboard-api.onrender.com/api
       - uses: actions/upload-pages-artifact@v3
         with:
           path: client/dist
